--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ SQLITE_COLLECTION=memories
 OCEANBASE_HOST=127.0.0.1
 OCEANBASE_PORT=2881
 OCEANBASE_USER=root@sys
-OCEANBASE_PASSWORD=password
+OCEANBASE_PASSWORD=your_password
 OCEANBASE_DATABASE=powermem
 OCEANBASE_COLLECTION=memories
 
@@ -50,7 +50,7 @@ OCEANBASE_VIDX_NAME=memories_vidx
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
+POSTGRES_PASSWORD=your_password
 POSTGRES_DATABASE=powermem
 POSTGRES_COLLECTION=memories
 
@@ -66,60 +66,47 @@ POSTGRES_HNSW=true
 # =============================================================================
 # 2. LLM Configuration (Required)
 # =============================================================================
-# Choose your LLM provider: qwen, openai, siliconflow
+# Choose your LLM provider: qwen, openai, siliconflow, ollama, vllm, anthropic, deepseek
 LLM_PROVIDER=qwen
 
-# -----------------------------------------------------------------------------
-# Qwen Configuration (Default)
-# -----------------------------------------------------------------------------
 LLM_API_KEY=your_api_key_here
+# Adjust the model according to your provider, gpt-4 advised to use when provider is openai
 LLM_MODEL=qwen-plus
 
 ## Keep the default settings, as modifications are generally not needed.
-LLM_BASE_URL=https://dashscope.aliyuncs.com/api/v1
 LLM_TEMPERATURE=0.7
 LLM_MAX_TOKENS=1000
 LLM_TOP_P=0.8
 LLM_TOP_K=50
+# Only supported by qwen provider
 LLM_ENABLE_SEARCH=false
 
-# -----------------------------------------------------------------------------
-# OpenAI Configuration (Uncomment if using OpenAI)
-# -----------------------------------------------------------------------------
-# LLM_PROVIDER=openai
-# LLM_API_KEY=your-openai-api-key
-
-## Keep the default settings, as modifications are generally not needed.
-# LLM_MODEL=gpt-4
-# LLM_BASE_URL=https://api.openai.com/v1
-# LLM_TEMPERATURE=0.7
-# LLM_MAX_TOKENS=1000
-# LLM_TOP_P=1.0
+# Default Base URLs for LLM providers, you can adjust if necessary
+QWEN_LLM_BASE_URL=https://dashscope.aliyuncs.com/api/v1
+OPENAI_LLM_BASE_URL=https://api.openai.com/v1
+SILICONFLOW_LLM_BASE_URL=https://api.siliconflow.cn/v1
+OLLAMA_LLM_BASE_URL=
+VLLM_LLM_BASE_URL=
+ANTHROPIC_LLM_BASE_URL=https://api.anthropic.com
+DEEPSEEK_LLM_BASE_URL=https://api.deepseek.com
 
 # =============================================================================
 # 3. Embedding Configuration (Required)
 # =============================================================================
-# Choose your embedding provider: qwen, openai, mock
+# Choose your embedding provider: qwen, openai, huggingface, lmstudio, ollama
 EMBEDDING_PROVIDER=qwen
 
-# -----------------------------------------------------------------------------
-# Qwen Embedding Configuration (Default)
-# -----------------------------------------------------------------------------
 EMBEDDING_API_KEY=your_api_key_here
+# Adjust the model according to your provider, text-embedding-ada-002 advised to use  when provider is openai
 EMBEDDING_MODEL=text-embedding-v4
 EMBEDDING_DIMS=1536
-EMBEDDING_BASE_URL=https://dashscope.aliyuncs.com/api/v1
 
-# -----------------------------------------------------------------------------
-# OpenAI Embedding Configuration (Uncomment if using OpenAI)
-# -----------------------------------------------------------------------------
-# EMBEDDING_PROVIDER=openai
-# EMBEDDING_API_KEY=your-openai-api-key
-# EMBEDDING_MODEL=text-embedding-ada-002
-# EMBEDDING_DIMS=1536
-# EMBEDDING_BASE_URL=https://api.openai.com/v1
-
-
+# Default Base URLs for embedding providers, you can adjust if necessary
+QWEN_EMBEDDING_BASE_URL=https://dashscope.aliyuncs.com/api/v1
+OPENAI_EMBEDDING_BASE_URL=https://api.openai.com/v1
+HUGGINFACE_EMBEDDING_BASE_URL=
+LMSTUDIO_EMBEDDING_BASE_URL=
+OLLAMA_EMBEDDING_BASE_URL=
 
 ## 4-10. Keep the default settings, as modifications are generally not needed.
 # =============================================================================
@@ -241,7 +228,7 @@ GRAPH_STORE_PROVIDER=oceanbase
 GRAPH_STORE_HOST=127.0.0.1
 GRAPH_STORE_PORT=2881
 GRAPH_STORE_USER=root@sys
-GRAPH_STORE_PASSWORD=password
+GRAPH_STORE_PASSWORD=your_password
 GRAPH_STORE_DB_NAME=powermem
 
 # Optional: Graph traversal settings
