feat: Add sparse vector (#167)
* add sparse vector embedding

* hybrid search add sparse vector search

* add checking version logic

* add qwen sparse vector

* adjust weight

* update sparse vector function

* update sparse vector function

* fix bug

* fix bug

* optimise function

* optimise function

* optimise function

* optimise function

* optimise function

* optimise function

* optimise function

* fix bug

* add migrate function

* update alembic function

* update alembic function

* update alembic function

* adjust file struct

* update alembic

* update version

* optimise

* fix bug

* update

* update schema update method

* update schema update method

* update schema update method

* update schema update method

* update schema update method

* update migrate method

* update migrate method

* update env.example

* update env.example

* update migrate sparse vector

* update migrate sparse vector

* adjust threshold score logic

* update remark

* add guides and examples

* add benchmark param

* fix bug

* fulltext parsers support

* adjust enable sparse vector setting

* adjust env.example

* adjust docs

* update version

* fix bug

* optimise check

* adjust file construct

* adjust file construct

* add file

* fix bug

--- a/.env.example
+++ b/.env.example
@@ -248,7 +248,18 @@ GRAPH_STORE_MAX_HOPS=3
 # GRAPH_STORE_CUSTOM_DELETE_RELATIONS_PROMPT=
 
 # =============================================================================
-# 12. PowerMem HTTP API Server Configuration
+# 12. Sparse Embedding Configuration (Optional)
+# =============================================================================
+# Choose your sparse embedding provider: qwen, openai
+SPARSE_VECTOR_ENABLE=false
+SPARSE_EMBEDDER_PROVIDER=qwen
+
+SPARSE_EMBEDDER_API_KEY=your_api_key_here
+SPARSE_EMBEDDER_MODEL=text-embedding-v4
+SPARSE_EMBEDDING_BASE_URL=https://dashscope.aliyuncs.com/api/v1
+
+# =============================================================================
+# 13. PowerMem HTTP API Server Configuration
 # =============================================================================
 # Configuration for the PowerMem HTTP API Server
 # =============================================================================
