Feature (Docker): Manage database passwords using environment variables
-Replace the hard coded password with the 'SEEKDB_ROOT PASSWORD' environment variable
-Update health check commands to support optional passwords
-Modify the document to explain the password management method

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,26 +8,31 @@ services:
     image: oceanbase/powermem-server:latest
     container_name: powermem-server
     ports:
-      - "${POWERMEM_SERVER_PORT:-8000}:8000"
+      - "8000:8000"
     environment:
-      - POWERMEM_SERVER_HOST=${POWERMEM_SERVER_HOST:-0.0.0.0}
-      - POWERMEM_SERVER_PORT=${POWERMEM_SERVER_PORT:-8000}
-      - POWERMEM_SERVER_WORKERS=${POWERMEM_SERVER_WORKERS:-4}
-      - POWERMEM_SERVER_API_KEYS=${POWERMEM_SERVER_API_KEYS:-}
-      - POWERMEM_SERVER_AUTH_ENABLED=${POWERMEM_SERVER_AUTH_ENABLED:-false}
-      - POWERMEM_SERVER_RATE_LIMIT_ENABLED=${POWERMEM_SERVER_RATE_LIMIT_ENABLED:-true}
-      - POWERMEM_SERVER_RATE_LIMIT_PER_MINUTE=${POWERMEM_SERVER_RATE_LIMIT_PER_MINUTE:-100}
-      - POWERMEM_SERVER_LOG_LEVEL=${POWERMEM_SERVER_LOG_LEVEL:-INFO}
-      - POWERMEM_SERVER_LOG_FORMAT=${POWERMEM_SERVER_LOG_FORMAT:-json}
-      - POWERMEM_SERVER_CORS_ENABLED=${POWERMEM_SERVER_CORS_ENABLED:-true}
-      - POWERMEM_SERVER_CORS_ORIGINS=${POWERMEM_SERVER_CORS_ORIGINS:-*}
-      - POWERMEM_DATABASE_URL=${POWERMEM_DATABASE_URL:-}
-    env_file:
-      - .env
+      - POWERMEM_SERVER_HOST=0.0.0.0
+      - POWERMEM_SERVER_PORT=8000
+      - POWERMEM_SERVER_WORKERS=4
+      - POWERMEM_SERVER_API_KEYS=
+      - POWERMEM_SERVER_AUTH_ENABLED=false
+      - POWERMEM_SERVER_RATE_LIMIT_ENABLED=true
+      - POWERMEM_SERVER_RATE_LIMIT_PER_MINUTE=100
+      - POWERMEM_SERVER_LOG_LEVEL=INFO
+      - POWERMEM_SERVER_LOG_FORMAT=json
+      - POWERMEM_SERVER_CORS_ENABLED=true
+      - POWERMEM_SERVER_CORS_ORIGINS=*
+      - POWERMEM_DATABASE_URL=
+      # Database configuration for connecting to SeekDB
+      # Use SEEKDB_ROOT_PASSWORD variable for unified password management
+      - DATABASE_PROVIDER=oceanbase
+      - OCEANBASE_HOST=seekdb
+      - OCEANBASE_PORT=2881
+      - OCEANBASE_USER=root@sys
+      - OCEANBASE_PASSWORD=${SEEKDB_ROOT_PASSWORD:-}
+      - OCEANBASE_DATABASE=powermem
+      - OCEANBASE_COLLECTION=memories
     volumes:
       - ./logs:/app/logs
-      # Mount .env file so both SDK and Server can use the same configuration
-      - ./.env:/app/.env:ro
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/system/health"]
@@ -40,4 +45,42 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
+    depends_on:
+      - seekdb
+
+  seekdb:
+    image: oceanbase/seekdb:latest
+    container_name: powermem-seekdb
+    ports:
+      - "2881:2881"
+      - "2886:2886"
+    environment:
+      # Unified password variable for both SeekDB and PowerMem Server
+      - ROOT_PASSWORD=${SEEKDB_ROOT_PASSWORD:-}
+      - CPU_COUNT=4
+      - MEMORY_LIMIT=4G
+      - LOG_DISK_SIZE=2G
+      - DATAFILE_SIZE=2G
+      - DATAFILE_NEXT=2G
+      - DATAFILE_MAXSIZE=50G
+      - SEEKDB_DATABASE=powermem
+    volumes:
+      - seekdb_data:/var/lib/oceanbase
+      # Mount init.sql for database initialization (optional)
+      # - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "if [ -z \"${SEEKDB_ROOT_PASSWORD}\" ]; then mysqladmin ping -h localhost -P 2881 -u root; else mysqladmin ping -h localhost -P 2881 -u root -p${SEEKDB_ROOT_PASSWORD}; fi"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+volumes:
+  seekdb_data:
 
