--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,18 +15,18 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - POWERMEM_SERVER_HOST=0.0.0.0
-      - POWERMEM_SERVER_PORT=8000
-      - POWERMEM_SERVER_WORKERS=4
-      - POWERMEM_SERVER_API_KEYS=
-      - POWERMEM_SERVER_AUTH_ENABLED=false
-      - POWERMEM_SERVER_RATE_LIMIT_ENABLED=true
-      - POWERMEM_SERVER_RATE_LIMIT_PER_MINUTE=100
-      - POWERMEM_SERVER_LOG_LEVEL=INFO
-      - POWERMEM_SERVER_LOG_FORMAT=json
-      - POWERMEM_SERVER_CORS_ENABLED=true
-      - POWERMEM_SERVER_CORS_ORIGINS=*
-      - POWERMEM_DATABASE_URL=
+      - POWERMEM_SERVER_HOST=${POWERMEM_SERVER_HOST:-0.0.0.0}
+      - POWERMEM_SERVER_PORT=${POWERMEM_SERVER_PORT:-8000}
+      - POWERMEM_SERVER_WORKERS=${POWERMEM_SERVER_WORKERS:-4}
+      - POWERMEM_SERVER_API_KEYS=${POWERMEM_SERVER_API_KEYS:-}
+      - POWERMEM_SERVER_AUTH_ENABLED=${POWERMEM_SERVER_AUTH_ENABLED:-false}
+      - POWERMEM_SERVER_RATE_LIMIT_ENABLED=${POWERMEM_SERVER_RATE_LIMIT_ENABLED:-true}
+      - POWERMEM_SERVER_RATE_LIMIT_PER_MINUTE=${POWERMEM_SERVER_RATE_LIMIT_PER_MINUTE:-100}
+      - POWERMEM_SERVER_LOG_LEVEL=${POWERMEM_SERVER_LOG_LEVEL:-INFO}
+      - POWERMEM_SERVER_LOG_FORMAT=${POWERMEM_SERVER_LOG_FORMAT:-json}
+      - POWERMEM_SERVER_CORS_ENABLED=${POWERMEM_SERVER_CORS_ENABLED:-true}
+      - POWERMEM_SERVER_CORS_ORIGINS=${POWERMEM_SERVER_CORS_ORIGINS:-*}
+      - POWERMEM_DATABASE_URL=${POWERMEM_DATABASE_URL:-}
       # Database configuration for connecting to seekdb
       # Use SEEKDB_ROOT_PASSWORD variable for unified password management
       - DATABASE_PROVIDER=oceanbase
