--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: oceanbase/powermem-server:latest
     container_name: powermem-server
     ports:
-      - "8000:8000"
+      - "${POWERMEM_SERVER_PORT:-8000}:8000"
     environment:
       - POWERMEM_SERVER_HOST=${POWERMEM_SERVER_HOST:-0.0.0.0}
       - POWERMEM_SERVER_PORT=${POWERMEM_SERVER_PORT:-8000}
